--- a/src/App.css
+++ b/src/App.css
@@ -12,43 +12,24 @@ body,
   background-color: #e8e8e8;
 }
 table {
-  border-collapse: collapse;
-  width: 80%;
+  width: 100%;
   border: 1px solid #ddd;
   border-radius: 2%;
   box-shadow: inset 0 0 10px #000000;
   margin-top: 5%;
+  padding: 10px;
 }
-tr {
-  padding: 5px;
-  text-align: center;
-  border: 1px solid #ddd;
-  height: 25px;
-  width: 32px;
-  font-size: 16px;
-  cursor: pointer;
-  font-weight: bold;
-  color: #333;
-}
-td {
-  padding: 5px;
-  text-align: center;
-  border: 1px solid #ddd;
-  height: 25px;
-  width: 32px;
-  font-size: 16px;
-  cursor: pointer;
-  font-weight: bold;
-  color: #333;
-}
+tr,
+td,
 th {
-  cursor: pointer;
-  text-align: center;
   padding: 5px;
+  text-align: center;
   border: 1px solid #ddd;
   height: 25px;
   width: 32px;
   font-size: 16px;
+  cursor: pointer;
   font-weight: bold;
   color: #333;
+  margin: 5px;
 }
