--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,58 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
+@import url("bootstrap/dist/css/bootstrap.min.css");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Lora", serif;
   user-select: none;
+  text-align: center;
 }
-html,
-body,
-#root {
+
+body {
   background-color: #e8e8e8;
+  max-width: 100vw;
 }
+.poks-input {
+  border: none;
+  margin-right: 2px;
+  background-color: #fff;
+  width: 30px;
+  min-width: 30px;
+}
+.poks-input:focus {
+  outline: none;
+}
+
+.btn-types {
+  border-radius: 0;
+  max-width: fit-content;
+  max-height: fit-content;
+  border: none;
+  border-bottom: #212121 solid 1px;
+  font-size: 1rem;
+  font-weight: 300;
+  margin: 2px;
+  padding: 2px 5px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  color: #212121;
+}
+
+input[type="checkbox"],
+.btn-types:checked {
+  background-color: grey !important;
+  color: #fff;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 table {
   width: 100%;
   border: 1px solid #ddd;
@@ -23,10 +65,9 @@ tr,
 td,
 th {
   padding: 5px;
-  text-align: center;
   border: 1px solid #ddd;
-  height: 25px;
-  width: 32px;
+  height: 16px;
+  width: 25px;
   font-size: 16px;
   cursor: pointer;
   font-weight: bold;
