--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,15 @@
   user-select: none;
   text-align: center;
 }
-
+html {
+  max-width: 100vw;
+  max-height: 100vh;
+  /* overflow: hidden; */
+}
 body {
   background-color: #e8e8e8;
   max-width: 100vw;
+  max-height: 100vh;
 }
 .poks-input {
   border: none;
@@ -40,19 +45,16 @@ body {
   color: #212121;
 }
 
-input[type="checkbox"],
-.btn-types:checked {
-  background-color: grey !important;
-  color: #fff;
-}
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
+.table-section {
+  max-height: 60vh;
+  overflow-y: scroll;
+}
 table {
   width: 100%;
   border: 1px solid #ddd;
@@ -60,6 +62,8 @@ table {
   box-shadow: inset 0 0 10px #000000;
   margin-top: 5%;
   padding: 10px;
+  height: 10vh;
+  max-height: 10vh;
 }
 tr,
 td,
@@ -73,4 +77,13 @@ th {
   font-weight: bold;
   color: #333;
   margin: 5px;
+}
+thead {
+  position: sticky;
+}
+
+.footer {
+  height: 50px;
+  width: 100%;
+  min-height: 50px;
 }
