--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,40 @@ body {
 .poks-input:focus {
   outline: none;
 }
-
-.btn-types {
-  border-radius: 0;
+input[type="range"]::-webkit-slider-thumb {
+  width: 15px;
+  height: 15px;
+  background: rgb(216, 213, 213);
+}
+input[type="range"]::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  background: rgb(216, 213, 213);
+}
+input[type="range"]::-ms-thumb {
+  width: 15px;
+  height: 15px;
+  background: rgb(216, 213, 213);
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  background: #e8e8e8;
+}
+.types_wrapper {
   max-width: fit-content;
   max-height: fit-content;
+}
+.border_wrapper {
+  border: none;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.btn-types {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  border-radius: 0;
+  max-width: 100px;
+  /* max-height: 15px; */
   border: none;
   border-bottom: #212121 solid 1px;
   font-size: 1rem;
@@ -44,7 +73,15 @@ body {
   transition: all 0.2s ease-in-out;
   color: #212121;
 }
-
+.form-check {
+  max-width: max-content;
+}
+input[role="switch"] {
+  transition: all 0.2s ease-in-out;
+}
+input[role="switch"]:checked {
+  transition: all 0.2s ease-in-out;
+}
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -54,17 +91,13 @@ input::-webkit-inner-spin-button {
 .table-section {
   max-height: 60vh;
   overflow-y: scroll;
-}
-table {
+  overflow-x: hidden;
+  margin: 0 auto;
   width: 100%;
-  border: 1px solid #ddd;
-  border-radius: 2%;
-  box-shadow: inset 0 0 10px #000000;
-  margin-top: 5%;
-  padding: 10px;
-  height: 10vh;
-  max-height: 10vh;
+  border-radius: 0;
+  /* box-shadow: #212121 0px 0px 2px 0px; */
 }
+
 tr,
 td,
 th {
