--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   background-color: #e8e8e8;
   max-width: 100vw;
   max-height: 100vh;
+  /* overflow: hidden; */
 }
 .poks-input {
   border: none;
