--- a/src/App.css
+++ b/src/App.css
@@ -92,23 +92,38 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.table-section {
-  max-height: 60vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  margin: 0 auto;
-  width: 100%;
-  border-radius: 0;
-  /* box-shadow: #212121 0px 0px 2px 0px; */
+
+.page-link {
+  color: #212121;
+}
+.no-outline,
+.no-outline:focus,
+.no-outline:active,
+.no-outline:hover {
+  outline: none !important;
+  box-shadow: none !important;
 }
 
+.table-section {
+  min-height: 80vh;
+  max-height: 80vh;
+}
+.spacer {
+  flex-grow: 1;
+}
+table {
+  margin: 20px;
+}
 tr,
 td,
 th {
-  padding: 5px;
+  padding: 2px;
   border: 1px solid #ddd;
-  height: 16px;
-  width: 25px;
+  height: 10px;
+  width: fit-content;
+  max-width: fit-content;
+  max-height: 10px;
+  text-align: center;
   font-size: 16px;
   cursor: pointer;
   font-weight: bold;
@@ -117,10 +132,4 @@ th {
 }
 thead {
   position: sticky;
-}
-
-.footer {
-  height: 50px;
-  width: 100%;
-  min-height: 50px;
 }
