--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap");
 @import url("bootstrap/dist/css/bootstrap.min.css");
+@import url("./ui/css/checkbox.css");
+
+:root {
+  --white: #ffffff;
+  --primary: #121212;
+  --secondary: #181818;
+  --tertiary: #404040;
+  --quaternary: #282828;
+  --quinary: #b3b3b3;
+  --element-purple: #535bf2;
+  --element-orange: #fe7f2d;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Lora", serif;
+  font-family: "JetBrains Mono", monospace;
   user-select: none;
   text-align: center;
 }
@@ -22,82 +34,36 @@ body {
 }
 
 .font-sm {
-  display: flex;
   font-size: 0.8rem;
   background-color: inherit;
 }
-
-.poks-input {
-  border: none;
-  margin-right: 2px;
-  background-color: #fff;
-  width: 30px;
-  min-width: 30px;
-}
-.poks-input:focus {
-  outline: none;
-}
-input[type="range"]::-webkit-slider-thumb {
-  width: 15px;
-  height: 15px;
-  background: rgb(216, 213, 213);
-}
-input[type="range"]::-moz-range-thumb {
-  width: 15px;
-  height: 15px;
-  background: rgb(216, 213, 213);
-}
-input[type="range"]::-ms-thumb {
-  width: 15px;
-  height: 15px;
-  background: rgb(216, 213, 213);
-}
-input[type="range"]::-webkit-slider-runnable-track {
-  background: #e8e8e8;
-}
-.types_wrapper {
-  max-width: fit-content;
-  max-height: fit-content;
-}
-.p-inherit {
-  padding: inherit;
-}
-.border_wrapper {
-  border: none;
-  background-color: #fff;
-  border-radius: 5px;
-}
-.btn-types {
+.font-sm-li {
   display: flex;
-  flex-grow: 1;
+  flex-direction: column;
   justify-content: center;
-  border-radius: 0;
-  max-width: 100px;
-  /* max-height: 15px; */
-  border: none;
-  border-bottom: #212121 solid 1px;
-  font-size: 1rem;
-  font-weight: 300;
-  margin: 2px;
-  padding: 2px 5px;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  color: #212121;
+  align-items: center;
+  background-color: inherit;
 }
-.form-check {
-  max-width: max-content;
+
+.font-sm-icon {
+  font-size: 0.5rem;
+  background-color: inherit;
 }
+
+/*  
+#121212
+#181818
+#404040
+#282828
+#FFFFFF
+#B3B3B3
+*/
+
 input[role="switch"] {
   transition: all 0.2s ease-in-out;
 }
 input[role="switch"]:checked {
   transition: all 0.2s ease-in-out;
-}
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
 }
 
 .page-link {
@@ -111,12 +77,14 @@ input::-webkit-inner-spin-button {
   box-shadow: none !important;
 }
 
-.table-section {
+/* .table-section {
   min-height: 80vh;
   max-height: 80vh;
 }
-.spacer {
-  flex-grow: 1;
+
+.table-section {
+  width: fit-content;
+  height: fit-content;
 }
 table {
   margin: 20px;
@@ -126,10 +94,10 @@ td,
 th {
   padding: 2px;
   border: 1px solid #ddd;
-  height: 10px;
-  width: fit-content;
-  max-width: fit-content;
-  max-height: 10px;
+  height: 10px !important;
+  width: fit-content !important;
+  max-width: fit-content !important;
+  max-height: 10px !important;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
@@ -139,4 +107,4 @@ th {
 }
 thead {
   position: sticky;
-}
+} */
