--- a/src/App.css
+++ b/src/App.css
@@ -1,110 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap");
-@import url("bootstrap/dist/css/bootstrap.min.css");
-@import url("./ui/css/checkbox.css");
-
-:root {
-  --white: #ffffff;
-  --primary: #121212;
-  --secondary: #181818;
-  --tertiary: #404040;
-  --quaternary: #282828;
-  --quinary: #b3b3b3;
-  --element-purple: #535bf2;
-  --element-orange: #fe7f2d;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "JetBrains Mono", monospace;
-  user-select: none;
-  text-align: center;
-}
-html {
-  max-width: 100vw;
-  max-height: 100vh;
-  /* overflow: hidden; */
-}
-body {
-  background-color: #e8e8e8;
-  max-width: 100vw;
-  max-height: 100vh;
-  /* overflow: hidden; */
-}
-
-.font-sm {
-  font-size: 0.8rem;
-  background-color: inherit;
-}
-.font-sm-li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: inherit;
-}
-
-.font-sm-icon {
-  font-size: 0.5rem;
-  background-color: inherit;
-}
-
-/*  
-#121212
-#181818
-#404040
-#282828
-#FFFFFF
-#B3B3B3
-*/
-
-input[role="switch"] {
-  transition: all 0.2s ease-in-out;
-}
-input[role="switch"]:checked {
-  transition: all 0.2s ease-in-out;
-}
-
-.page-link {
-  color: #212121;
-}
-.no-outline,
-.no-outline:focus,
-.no-outline:active,
-.no-outline:hover {
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-/* .table-section {
-  min-height: 80vh;
-  max-height: 80vh;
-}
-
-.table-section {
-  width: fit-content;
-  height: fit-content;
-}
-table {
-  margin: 20px;
-}
-tr,
-td,
-th {
-  padding: 2px;
-  border: 1px solid #ddd;
-  height: 10px !important;
-  width: fit-content !important;
-  max-width: fit-content !important;
-  max-height: 10px !important;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  font-weight: bold;
-  color: #333;
-  margin: 5px;
-}
-thead {
-  position: sticky;
-} */
+@import "./ui/css";
