--- a/src/ui/css/index.css
+++ b/src/ui/css/index.css
@@ -2,3 +2,4 @@
 @import url("bootstrap/dist/css/bootstrap.min.css");
 @import url("./global.css");
 @import url("./checkbox.css");
+@import url("./table.css");
