--- a/src/ui/Checkbox/Checkbox.module.css
+++ b/src/ui/Checkbox/Checkbox.module.css
@@ -1,12 +1,34 @@
 /*
 Chekboxes
 */
+
+.highlight {
+  display: flex;
+  justify-content: center;
+  border-radius: 0%;
+  max-width: 100px;
+  border: none;
+  border-bottom: #212121 solid 1px;
+  margin: 2px;
+  padding: 2px 5px;
+}
+.checkedBox {
+  color: var(--element-purple);
+  border-color: var(--element-purple);
+}
+.jelly {
+  min-width: 20px;
+  max-width: 25px;
+  max-height: 25px;
+}
+
 label:hover {
   color: var(--element-purple) !important;
   border-width: 1px !important;
   border-color: var(--element-purple) !important;
   text-shadow: var(--element-purple) 0px 0px 0px 2px !important;
   transition: all 0.1s ease-in-out;
+  cursor: pointer;
 }
 
 .cbx {
@@ -26,7 +48,7 @@ label:hover {
   content: "";
   position: absolute;
   top: 0px;
-  left: 4px;
+  left: 5px;
   width: 7px;
   height: 12px;
   opacity: 0;
@@ -36,27 +58,30 @@ label:hover {
   /* transition: all 0.15 ease; */
   transition-delay: 0.15s;
 }
-
 .lbl {
+  margin: 0;
   margin-left: 5px;
-  vertical-align: middle;
-  cursor: pointer;
+  max-width: fit-content;
+  text-align: left;
+  justify-content: flex-start;
 }
-.checked-box {
-  color: #6871f1;
-  border-color: #6871f1;
+.checkedBox {
+  color: var(--element-purple);
+  border-color: var(--element-purple);
 }
 input[role="switch"]:checked ~ .cbx {
-  border-color: transparent;
-  background: #6871f1;
-  /* animation: jelly 0.6s ease; */
+  border-color: var(--element-purple);
+  background: var(--element-purple);
 }
 
 input[role="switch"]:checked ~ .cbx:after {
   opacity: 1;
   transform: rotate(45deg) scale(1);
 }
-
+input[role="switch"]:checked ~ .lbl {
+  color: var(--element-purple);
+  border-color: var(--element-purple);
+}
 .cntr {
   display: flex;
   max-width: fit-content;
@@ -65,6 +90,6 @@ input[role="switch"]:checked ~ .cbx:after {
   gap: 5px;
 }
 
-.hidden-xs-up {
+.hiddenXsUp {
   display: none !important;
 }
