--- a/src/ui/Containers/Stacks/HStack/HStack.module.css
+++ b/src/ui/Containers/Stacks/HStack/HStack.module.css
@@ -4,4 +4,7 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
+  max-height: 100%;
+  height: 100%;
+  /* overflow: hidden; */
 }
